# Peanut

./: CMakeLists.txt  LICENSE  README.md  README.txt
cmake/: PeanutConfig.cmake
src/atomic/include/: CAS.h  Kahan.h  PeanutAtomic.h  WAG.h  WIB.h
src/random_number/include/: Lcg.cuh  Lcg.h
src/utility/: GPU.cpp  GPU.tpp  LogBook.cpp  Timer.cpp
src/utility/include/: Exception.h  GPU.h  LogBook.h  Timer.h
unit_test/: CMakeLists.txt
unit_test/atomic/: CMakeLists.txt  Main.cpp  README.txt  Test.cpp  Test.h  TestGPU.cu  TestManager.cpp  TestManagerGPU.cu
unit_test/atomic/include/: FP32.cuh  FP32KahanOptimized.cuh  FP32KahanUnoptimized.cuh  FP64.cuh  FP64CAS.cuh  FP64WAG.cuh  FP64WIB.cuh  GroundTruth.cuh  Parameter.h  Test.h  TestManager.h
unit_test/utility/: CMakeLists.txt
unit_test/utility/persistent_thread/: CMakeLists.txt  README.txt  Test.cu
